form overflow fix

--- a/styles/sass/components/ContactSection.module.scss
+++ b/styles/sass/components/ContactSection.module.scss
@@ -11,7 +11,7 @@ $peach: hsl(11, 73%, 66%);
 	&__main {
 		position: relative;
 		background-color: $peach;
-		overflow: hidden;
+		// overflow: hidden;
 
 		@media screen and (min-width: 768px) {
 			border-radius: 10px;
